# cmake-stm32

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  arm-none-eabi-gcc.cmake  project.yml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
BSP/: .mxproject  BSP.ioc  Makefile  STM32F411VETx_FLASH.ld
BSP/Core/Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
BSP/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
BSP/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal_adc.h
BSP/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc/: usbh_cdc.h
BSP/Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Src/: usbh_cdc.c
BSP/PDM2PCM/App/: pdm2pcm.c  pdm2pcm.h
BSP/USB_HOST/App/: usb_host.c  usb_host.h
debug-files/: STM32F411.svd  pdm-mic.jdebug
include/: led_controller.h  led_game.h  led_pattern.h  main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
src/: cmsis-blink.c  hal-blink.c  led_controller.c  led_game.c  led_pattern.c  main.c  stm32f4xx_it.c
test/: test_led_controller.c  test_led_game.c  test_led_pattern.c
